--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -139,12 +139,12 @@
  <details id="tab2"><summary>Employer</summary>
 <p>Understanding the employer's tax obligations:</p>
 <ul>
-<li><a href="#2A">Withholding and remitting deductions </a> </li>
-<li><a href="#2B">Reporting and distributing the slip</a> </li>
-<li><a href="#2C">Reporting on the employer's income tax return</a> </li>
+<li><a href="#2A">Payroll obligations</a> </li>
+<li><a href="#2B">Income tax obligations</a> </li>
+<li><a href="#2C">GST/HST obligations</a> </li>
 </ul> 
 
-<h2 id="2A">Withholding and remitting deductions </h2>
+<h2 id="2A">Payroll obligations </h2>
 <p>If the employer makes a payment related to employment income, the withholding and remitting are different depending on <strong>who the payment is made to</strong> and the <strong>type of payment</strong>.</p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
@@ -152,7 +152,7 @@
 <div data-ajax-replace="/cra-arc/payroll/file/pier.html#ajax-pier"></div>
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a></p>
 </details>
-<h2 id="2B">Reporting and distributing the slip</h2>
+<h3 id="2Aa">Reporting and distributing the slip</h3>
 <p>Generally, if the employer makes a payment in an employment relationship, the employer <strong>must</strong> fill out a T4 slip. </p>
 
 <p>If the employer distributes the slips late or does not distribute, the employer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
@@ -163,8 +163,12 @@
 <li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
 </ul>
 
-<h2 id="2C">Reporting the payment on the employer's income tax return</h2>
-<p>Generally, the employer includes the payment made to the employee in their calculation of business income and expenses using one of the following form when filing their income tax return:</p>
+
+<h2 id="2B">Income tax obligations</h2>
+<p>Residents of Canada are required to report their worldwide income from all sources. If the person is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
+<p>Learn more about non-residents: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/non-residents-canada.html#txblgtns">Non-residents of Canada</a></p>
+
+<p>The employer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, self-employment, property, investments and benefits. To report and pay tax, the employer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -184,8 +188,12 @@
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5013sch125.html">Schedule 125</a>, Income Statement Information</p>
 
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/t5013-partnership-information-return-filing-requirements.html">T5013 Partnership Information Return filing requirements</a></p>
+
 </li>
 </ul>
+<h2 id="2C">GST/HST obligations</h2>
+
+
 </details>
 </div></div>
   
