--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -142,6 +142,7 @@
 <li><a href="#2A">Payroll obligations</a> </li>
 <li><a href="#2B">Income tax obligations</a> </li>
 <li><a href="#2C">GST/HST obligations</a> </li>
+<li><a href="#2D">Other tax obligations</a> </li>
 </ul> 
 
 <h2 id="2A">Payroll obligations </h2>
@@ -192,7 +193,10 @@
 </li>
 </ul>
 <h2 id="2C">GST/HST obligations</h2>
+<p>Generally, any person who provides goods or services and earn more than $30,000 over four calendar quarters, must register, charge and remit (pay) the GST/HST. </p>
+ <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/when-register-charge.html">When to register for and start charging the GST/HST</a></p>
 
+<h2 id="2D">Other tax obligations</h2>
 
 </details>
 </div></div>
