--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -121,19 +121,17 @@
  <div class="wb-tabs">
                <div class="tabpanels">
     <details id="tab1"><summary>Employee</summary>
-<p>Understanding the employee's tax obligations:</p>
+<h2 id="1b">Income tax obligations</h2>
+<p>Residents of Canada are required to report their worldwide income from all sources. If the person is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
+<p>When filing the <strong>T1 return</strong>, the employee uses the amounts from the T4 slip.</p>
+<p>Learn more: </p>
 <ul>
-<li><a href="#1a">Receiving the slip</a> </li>
-<li><a href="#1b">Reporting the income earned on the employee's income tax return</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/understand-your-tax-slips/t4-slips/t4-statement-remuneration-paid.html">T4 slip: Statement of Remuneration Paid</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/non-residents-canada.html#txblgtns">Non-residents of Canada</a></li>
 </ul> 
-
-<h2 id="1a">Receiving the slip</h2>
+<h3 id="1a">Receiving the slip</h3>
 <p>Generally, the employer <strong>must</strong> provide the employee with a T4 slip which includes any payment made regardless if the income is taxable or not. </p>
 <p>Learn more about the options if the employee does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></p>
-
-<h2 id="1b">Reporting the income earned on the employee's income tax return</h2>
-<p>When filing the <strong>T1 return</strong>, the employee uses the amounts from the T4 slip.</p>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/understand-your-tax-slips/t4-slips/t4-statement-remuneration-paid.html">T4 slip: Statement of Remuneration Paid</a></p>
 
  </details>
  <details id="tab2"><summary>Employer</summary>
@@ -146,6 +144,7 @@
 </ul> 
 
 <h2 id="2A">Payroll obligations </h2>
+<h2 id="2Aa">Withholding and remitting deductions</h2>
 <p>If the employer makes a payment related to employment income, the withholding and remitting are different depending on <strong>who the payment is made to</strong> and the <strong>type of payment</strong>.</p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
@@ -153,7 +152,7 @@
 <div data-ajax-replace="/cra-arc/payroll/file/pier.html#ajax-pier"></div>
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a></p>
 </details>
-<h3 id="2Aa">Reporting and distributing the slip</h3>
+<h3 id="2Ab">Reporting and distributing the slip</h3>
 <p>Generally, if the employer makes a payment in an employment relationship, the employer <strong>must</strong> fill out a T4 slip. </p>
 
 <p>If the employer distributes the slips late or does not distribute, the employer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
@@ -166,10 +165,7 @@
 
 
 <h2 id="2B">Income tax obligations</h2>
-<p>Residents of Canada are required to report their worldwide income from all sources. If the person is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
-<p>Learn more about non-residents: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/non-residents-canada.html#txblgtns">Non-residents of Canada</a></p>
-
-<p>The employer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, self-employment, property, investments and benefits. To report and pay tax, the employer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
+<p>The employer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the employer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
