--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -188,12 +188,15 @@
  <details id="tab2"><summary>Payer</summary>
 <p>Understanding the payer's tax obligations:</p>
 <ul>
-<li><a href="#2A">Withholding and remitting deductions from the payment</a> </li>
-<li><a href="#2B">Reporting and distributing the slip</a> </li>
-<li><a href="#2C">Reporting the payment on the payer's income tax return</a> </li>
+<li><a href="#2A">Payroll obligations</a> </li>
+<li><a href="#2B">Income tax obligations</a> </li>
+<li><a href="#2C">GST/HST obligations</a> </li>
+<li><a href="#2D">Other tax obligations</a> </li>
 </ul> 
 
-<h2 id="2A">Withholding and remitting deductions from the payment</h2>
+<h2 id="2A">Payroll obligations </h2>
+<h3 id="2Aa">Withholding and remitting deductions</h3>
+
 <p>Generally, the payer <strong>does not</strong> withhold or remit the income tax, EI, CPP or GST/HST on the payment made to a self-employed worker. </p>
 
 <p>Under special EI regulations, the payer <strong>must</strong> withhold and remit EI on behalf of the self-employed worker if the worker is a:</p>
@@ -205,7 +208,7 @@
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
- <h2 id="2B">Reporting and distributing the slip</h2>
+ <h3 id="2Ab">Reporting and distributing the slip</h3>
 <p>Generally, if the payer pays a self-employed worker, the payer <strong>must</strong> report on the following slip depending on who the payment made to:</p> 
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -226,8 +229,8 @@
 <li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
 </ul>
 
-<h2 id="2C">Reporting the payment on the payer's income tax return</h2>
-<p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
+<h2 id="2B">Income tax obligations</h2>
+<p>The payer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the payer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -243,6 +246,12 @@
 </li>	
 </ul>
 
+<h2 id="2D">Other tax obligations</h2>
+<p>Depending on the type of industry, the payer may have other tax obligations. </p>
+<p>Learn more on other tax obligations:</p>
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li></li>	
+</ul>
 
 </details>
 </div></div>
