--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -193,6 +193,11 @@
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/when-register-charge.html">When to register for and start charging the GST/HST</a></p>
 
 <h2 id="2D">Other tax obligations</h2>
+<p>Depending on the type of industry, the payer may have other tax obligations. </p>
+<p>Learn more on other tax obligations:</p>
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li></li>	
+</ul>
 
 </details>
 </div></div>
