--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -114,26 +114,13 @@
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
 <li><a href="#tab2" class="wb-tabs-ext">Employer</a> </li>
+<li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
 </ul>   
 
  <div class="wb-tabs">
                <div class="tabpanels">
-    <details id="tab1"><summary>Employee</summary>
-<h2 id="1b">Income tax obligations</h2>
-<p>Residents of Canada are required to report their worldwide income from all sources. If the person is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
-<p>When filing the <strong>T1 return</strong>, the employee uses the amounts from the T4 slip.</p>
-<p>Learn more: </p>
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/understand-your-tax-slips/t4-slips/t4-statement-remuneration-paid.html">T4 slip: Statement of Remuneration Paid</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/non-residents-canada.html#txblgtns">Non-residents of Canada</a></li>
-</ul> 
-<h3 id="1a">Receiving the slip</h3>
-<p>Generally, the employer <strong>must</strong> provide the employee with a T4 slip which includes any payment made regardless if the income is taxable or not. </p>
-<p>Learn more about the options if the employee does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></p>
-
- </details>
+   
  <details id="tab2"><summary>Employer</summary>
 <p>Understanding the employer's tax obligations:</p>
 <ul>
@@ -200,6 +187,21 @@
 </ul>
 
 </details>
+ <details id="tab1"><summary>Employee</summary>
+<h2 id="1b">Income tax obligations</h2>
+<p>Residents of Canada are required to report their worldwide income from all sources. If the person is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
+<p>When filing the <strong>T1 return</strong>, the employee uses the amounts from the T4 slip.</p>
+<details><summary>Receiving the slip</summary>
+<p>Generally, the employer <strong>must</strong> provide the employee with a T4 slip which includes any payment made regardless if the income is taxable or not. </p>
+<p>Learn more about the options if the employee does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></p>
+ </details>
+<p>Learn more: </p>
+<ul>
+<li><a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes.html">Get ready to do your taxes</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/non-residents-canada.html#txblgtns">Non-residents of Canada</a></li>
+</ul> 
+
+ </details>
 </div></div>
   
 
