--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -154,36 +154,33 @@
 <h2 id="2B">Income tax obligations</h2>
 <p>The employer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the employer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h4>T1 return</h4> 
+<li class="cnjnctn-col"><details><summary>T1 return</summary> 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a>, Statement of Fishing Activities</li>
 </ul>
  <p>Learn more: <a href="https://www.canada.ca/en/services/taxes/income-tax/business-or-professional-income.html">Business or professional income </a></p>
-</li>
-
-<li class="cnjnctn-col"><h4>T2 return</h4> 
+</details></li>
+<li class="cnjnctn-col"><details><summary>T2 return</summary> 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</p>
 
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
-</li>	
-<li class="cnjnctn-col"><h4>T5013 return</h4> 
+</details></li>
+
+<li class="cnjnctn-col"><details><summary>T5013 return</summary> 	
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5013sch125.html">Schedule 125</a>, Income Statement Information</p>
-
- <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/t5013-partnership-information-return-filing-requirements.html">T5013 Partnership Information Return filing requirements</a></p>
-
-</li>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/t5013-partnership-information-return-filing-requirements.html">T5013 Partnership Information Return filing requirements</a></p>
+</details></li>
 </ul>
 <h2 id="2C">GST/HST obligations</h2>
 <p>Generally, any person who provides goods or services and earn more than $30,000 over four calendar quarters, must register, charge and remit (pay) the GST/HST. </p>
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/when-register-charge.html">When to register for and start charging the GST/HST</a></p>
 
 <h2 id="2D">Other tax obligations</h2>
-<p>Depending on the type of industry, the payer may have other tax obligations. </p>
-<p>Learn more on other tax obligations:</p>
+<p>Depending on the type of industry, the payer may have other tax obligations, for example: </p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li></li>	
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>	
 </ul>
 
 </details>
