--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -131,6 +131,8 @@
 </ul> 
 
 <h2 id="2A">Payroll obligations </h2>
+<p>Employers must must register, withhold deductions, and remit (pay) the GST/HST. </p>
+
 <h3 id="2Aa">Withholding and remitting deductions</h3>
 <p>If the employer makes a payment related to employment income, the withholding and remitting are different depending on <strong>who the payment is made to</strong> and the <strong>type of payment</strong>.</p>
 
@@ -174,8 +176,14 @@
 </details></li>
 </ul>
 <h2 id="2C">GST/HST obligations</h2>
-<p>Generally, any person who provides goods or services and earn more than $30,000 over four calendar quarters, must register, charge and remit (pay) the GST/HST. </p>
- <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/when-register-charge.html">When to register for and start charging the GST/HST</a></p>
+<p>Generally, any person who provides goods or services and earn more than $30,000 over four calendar quarters, must:</p>
+<ul>
+<li>Open a GST/HST account</li>	
+<li>Charge and collect the tax</li>	
+<li>Complete and file a GST/HST return</li>
+<li>Remit (pay) the tax collected</li>	
+</ul>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Collect, file, and remit (pay) the GST/HST</a></p>
 
 <h2 id="2D">Other tax obligations</h2>
 <p>Depending on the type of industry, the payer may have other tax obligations, for example: </p>
