--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -131,9 +131,10 @@
 </ul> 
 
 <h2 id="2A">Payroll obligations </h2>
-<p>Employers must must register, withhold deductions, and remit (pay) the GST/HST. </p>
+<div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/register/findout.html#employer"></div>
 
-<h3 id="2Aa">Withholding and remitting deductions</h3>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col"><details><summary>Withholding and remitting deductions</summary> 
 <p>If the employer makes a payment related to employment income, the withholding and remitting are different depending on <strong>who the payment is made to</strong> and the <strong>type of payment</strong>.</p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
@@ -141,17 +142,16 @@
 <div data-ajax-replace="/cra-arc/payroll/file/pier.html#ajax-pier"></div>
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a></p>
 </details>
-<h3 id="2Ab">Reporting and distributing the slip</h3>
+</details></li>
+<li class="cnjnctn-col"><details><summary>Reporting and distributing the slip</summary> 
 <p>Generally, if the employer makes a payment in an employment relationship, the employer <strong>must</strong> fill out a T4 slip. </p>
-
 <p>If the employer distributes the slips late or does not distribute, the employer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
-
 <p>Learn more:</p>
 <ul>
 <li> <a href="https://test.canada.ca/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
 <li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
 </ul>
-
+</details></li></ul>
 
 <h2 id="2B">Income tax obligations</h2>
 <p>The employer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the employer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
@@ -176,13 +176,7 @@
 </details></li>
 </ul>
 <h2 id="2C">GST/HST obligations</h2>
-<p>Generally, any person who provides goods or services and earn more than $30,000 over four calendar quarters, must:</p>
-<ul>
-<li>Open a GST/HST account</li>	
-<li>Charge and collect the tax</li>	
-<li>Complete and file a GST/HST return</li>
-<li>Remit (pay) the tax collected</li>	
-</ul>
+<p>Generally, any person who provides goods or services and earn more than $30,000 over four calendar quarters, must open a GST/HST account, collect, file and remit (pay) the GST/HST.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Collect, file, and remit (pay) the GST/HST</a></p>
 
 <h2 id="2D">Other tax obligations</h2>
@@ -194,7 +188,8 @@
 </details>
  <details id="tab1"><summary>Employee</summary>
 <h2 id="1b">Income tax obligations</h2>
-<p>Residents of Canada are required to report their worldwide income from all sources. If the person is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
+<p>Residents of Canada are required to report their worldwide income from all sources. </p>
+<p>If the person is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
 <p>When filing the <strong>T1 return</strong>, the employee uses the amounts from the T4 slip.</p>
 <details><summary>Receiving the slip</summary>
 <p>Generally, the employer <strong>must</strong> provide the employee with a T4 slip which includes any payment made regardless if the income is taxable or not. </p>
