--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -131,27 +131,15 @@
 </ul> 
 
 <h2 id="2A">Payroll obligations </h2>
-<div data-ajax-replace="https://test.canada.ca/cra-arc/payroll/register/findout.html#employer"></div>
+<p>Generally, any person must open a payroll account, calculate/remit deductions and contributions, and file information returns if the payment is one of following: </p>
 
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><details><summary>Withholding and remitting deductions</summary> 
-<p>If the employer makes a payment related to employment income, the withholding and remitting are different depending on <strong>who the payment is made to</strong> and the <strong>type of payment</strong>.</p>
-
-<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
-<details><summary>Discrepancies between the required and reported amounts</summary>
-<div data-ajax-replace="/cra-arc/payroll/file/pier.html#ajax-pier"></div>
-<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a></p>
-</details>
-</details></li>
-<li class="cnjnctn-col"><details><summary>Reporting and distributing the slip</summary> 
-<p>Generally, if the employer makes a payment in an employment relationship, the employer <strong>must</strong> fill out a T4 slip. </p>
-<p>If the employer distributes the slips late or does not distribute, the employer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
-<p>Learn more:</p>
 <ul>
-<li> <a href="https://test.canada.ca/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
-<li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
+<li>Pay salaries, wages (including advances), bonuses, vacation pay, or tips to employees </li>
+<li>Provide certain taxable benefits to employees (for example, an automobile or allowances) </li>
 </ul>
-</details></li></ul>
+
+<p>If the employer makes a payment in an employment relationship, the employer <strong>must</strong> fill out a <a href="https://test.canada.ca/cra-arc/payroll/file/t4slip.html">T4 slip</a>. </p>
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/index.html">Payroll</a></p>
 
 <h2 id="2B">Income tax obligations</h2>
 <p>The employer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the employer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
@@ -176,7 +164,7 @@
 </details></li>
 </ul>
 <h2 id="2C">GST/HST obligations</h2>
-<p>Generally, any person who provides goods or services and earn more than $30,000 over four calendar quarters, must open a GST/HST account, collect, file and remit (pay) the GST/HST.</p>
+<p>Generally, any person must open a GST/HST account, collect, file and remit (pay) the GST/HST if they provide goods or services and earn more than $30,000 over 4 calendar quarters.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Collect, file, and remit (pay) the GST/HST</a></p>
 
 <h2 id="2D">Other tax obligations</h2>
