--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -176,8 +176,8 @@
 </details>
  <details id="tab1"><summary>Employee</summary>
 <h2 id="1b">Income tax obligations</h2>
-<p>Residents of Canada are required to report their worldwide income from all sources. </p>
-<p>If the person is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
+<p>Employees who are residents of Canada are required to report their worldwide income from all sources. </p>
+<p>If the employee is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
 <p>When filing the <strong>T1 return</strong>, the employee uses the amounts from the T4 slip.</p>
 <details><summary>Receiving the slip</summary>
 <p>Generally, the employer <strong>must</strong> provide the employee with a T4 slip which includes any payment made regardless if the income is taxable or not. </p>
