--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -132,7 +132,9 @@
 </ul> 
 
 <h2 id="2A">Payroll obligations </h2>
-<h3 id="2Aa">Withholding and remitting deductions</h3>
+<p>Generally, any person must open a payroll account, calculate/remit deductions and contributions, and file information returns if they make payments to a self-employed worker. </p>
+
+<details><summary>Withholding and remitting deductions</summary>
 
 <p>Generally, the payer <strong>does not</strong> withhold or remit the income tax, EI, CPP or GST/HST on the payment made to a self-employed worker. </p>
 
@@ -144,27 +146,19 @@
 </ul>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
+</details>
 
- <h3 id="2Ab">Reporting and distributing the slip</h3>
-<p>Generally, if the payer pays a self-employed worker, the payer <strong>must</strong> report on the following slip depending on who the payment made to:</p> 
-
+<p>If the payer makes a payment in a self-employment relationship, the employer <strong>must</strong> report on the following slip depending on who the payment is made to:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4>T4 slip</h4> 
+<li class="cnjnctn-col"><h4><a href="https://test.canada.ca/cra-arc/payroll/file/t4slip.html">T4 slip</a></h4> 
 <p>Self-employed fisher, barber, hairdresser, taxi driver, or a driver of other passenger vehicle</p>
 </li>	
-<li class="cnjnctn-col"><h4>T4A slip</h4> 
+<li class="cnjnctn-col"><h4><a href="https://test.canada.ca/cra-arc/payroll/file/t4aslip.html">T4A slip</a></h4> 
 <p>Self-employed farmer and other self-employed workers</p>
-
 </li>
 </ul>
 
-<p>If the payer distributes the slips late or does not distribute, the payer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
-
-<p>Learn more:</p>
-<ul>
-<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></li>
-<li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
-</ul>
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/index.html">Payroll</a></p>
 
 <h2 id="2B">Income tax obligations</h2>
 <p>The payer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the payer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
@@ -183,11 +177,14 @@
 </li>	
 </ul>
 
+<h2 id="2C">GST/HST obligations</h2>
+<p>Generally, any person must open a GST/HST account, collect, file and remit (pay) the GST/HST if they provide goods or services and earn more than $30,000 over 4 calendar quarters.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Collect, file, and remit (pay) the GST/HST</a></p>
+
 <h2 id="2D">Other tax obligations</h2>
-<p>Depending on the type of industry, the payer may have other tax obligations. </p>
-<p>Learn more on other tax obligations:</p>
+<p>Depending on the type of industry, the payer may have other tax obligations, for example: </p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li></li>	
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>	
 </ul>
 
 </details>
