--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -163,18 +163,18 @@
 <h2 id="2B">Income tax obligations</h2>
 <p>The payer must report and pay tax on all income earned from taxable activities. The income is the net earnings from employment, property, investments and benefits. To report and pay tax, the payer must calculate the business income and expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h4>T1 return</h4> 
+<li class="cnjnctn-col"><details><summary>T1 return</summary> 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a>, Statement of Fishing Activities</li>
 </ul>
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
-</li>
-<li class="cnjnctn-col"><h4>T2 return</h4> 
+</details></li>
+<li class="cnjnctn-col"><details><summary>T2 return</summary> 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</p>
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
-</li>	
+</details></li>
 </ul>
 
 <h2 id="2C">GST/HST obligations</h2>
