--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -132,7 +132,7 @@
 </ul> 
 
 <h2 id="2A">Payroll obligations </h2>
-<p>Generally, any person must open a payroll account, calculate/remit deductions and contributions, and file information returns if they make payments to a self-employed worker. </p>
+<p>Generally, any person must open a payroll account, calculate payroll deductions and contributions, remit (pay) deductions and contributions, and file information returns if they make payments to a self-employed worker.</p>
 
 <details><summary>Withholding and remitting deductions</summary>
 
@@ -191,26 +191,13 @@
  <details id="tab1"><summary>Self-employed</summary>
 <p>Understanding the self-employed's tax obligations:</p>
 <ul>
-<li><a href="#1a">Receiving the slip</a> </li>
+<li><a href="#1c">Income tax obligations</a> </li>
 <li><a href="#1b">Remitting the GST/HST on payments made by the self-employed worker</a> </li>
-<li><a href="#1c">Reporting the income earned on the self-employed's income tax return</a> </li>
-<li><a href="#1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</a> </li>
+<li><a href="#1d">Payroll and GST/HST obligations for employees of the self-employed worker</a> </li>
 </ul> 
 
-<h2 id="1a">Receiving the slip</h2>
-<p>Generally, the payer <strong>must</strong> provide the self-employed worker with a T4A or T4 slip which includes any payment made regardless if the income is taxable or not. </p>
-<p>Learn more: </p>
- <ul>
-<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></li>
-<li>Options if the self-employed worker does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
- </ul>	
 
-<h2 id="1b">Remitting the GST/HST on payments made by the self-employed worker</h2>
-<p>Generally, the self-employed worker must remit the GST/HST on taxable supplies or services provided by them.</p>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
-
-
-<h2 id="1c">Reporting the income earned on the self-employed's income tax return</h2>
+<h2 id="1c">Income tax obligations</h2>
 
 <p>When filing the <strong>T1 return</strong>, the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
@@ -234,20 +221,25 @@
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/report-business-income-expenses.html">Report business income and expenses</a></p>
 </li>
 </ul>
+<details><summary>Receiving the slip</summary>
+<p>Generally, the payer <strong>must</strong> provide the self-employed worker with a T4A or T4 slip which includes any payment made regardless if the income is taxable or not. </p>
+<p>Learn more: </p>
+ <ul>
+<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></li>
+<li>Options if the self-employed worker does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
+ </ul>	
+ </details>
 
 <p class="mrgn-tp-lg">Learn more about other reporting tax obligations: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships.html">Sole proprietorships and partnerships</a></p>
 
+<h2 id="1b">Remitting the GST/HST on payments made by the self-employed worker</h2>
+<p>Generally, the self-employed worker must remit the GST/HST on taxable supplies or services provided by them.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
 
-<h2 id="1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</h2>
-<p>The self-employed worker payroll and GST/HST (including Fuel charge if the PSB is a road carrier) tax obligations for employees of the self-employed worker are the same as regular employers.</p>
+<h2 id="1d">Payroll and GST/HST obligations for employees of the self-employed worker</h2>
+<p>The payroll and GST/HST obligations for employees of the self-employed worker are the same as regular employers.</p>
 
-<p>Learn more: </p>
-<ul><li><a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>
-
-</ul>
-
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship: Understand the tax obligations</a></p>
 
 </details>
 
