--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -131,11 +131,11 @@
 </ul> 
 
 <h2 id="2A">Payroll obligations </h2>
-<p>Generally, any person must open a payroll account, calculate payroll deductions and contributions, remit (pay) deductions and contributions, and file information returns if the payment is one of following: </p>
+<p>Generally, any person must open a payroll account, calculate payroll deductions and contributions, remit (pay) deductions and contributions, and file information returns if the payment is: </p>
 
-<ul>
-<li>Pay salaries, wages (including advances), bonuses, vacation pay, or tips to employees </li>
-<li>Provide certain taxable benefits to employees (for example, an automobile or allowances) </li>
+ <ul class="fa-ul">
+	      <li><span class="fas fa-check fa-li text-success"></span> Pay salaries, wages (including advances), bonuses, vacation pay, or tips to employees </li>
+<li><span class="fas fa-check fa-li text-success"></span> Provide certain taxable benefits to employees (for example, an automobile or allowances) </li>
 </ul>
 
 <p>Generally, the employer must withhold and remit the income tax, EI, CPP or GST/HST on payments made related to employment income.</p>
