--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -115,8 +115,8 @@
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">Self-employed</a> - Worker </li>
 <li><a href="#tab2" class="wb-tabs-ext">Payer</a> - Payments made to a self-employed worker</li>
+<li><a href="#tab1" class="wb-tabs-ext">Self-employed</a> - Worker </li>
 </ul>   
 
  <div class="wb-tabs">
@@ -150,10 +150,10 @@
 
 <p>If the payer makes a payment in a self-employment relationship, the employer <strong>must</strong> report on the following slip depending on who the payment is made to:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4><a href="https://test.canada.ca/cra-arc/payroll/file/t4slip.html">T4 slip</a></h4> 
+<li class="cnjnctn-col"><h5><a href="https://test.canada.ca/cra-arc/payroll/file/t4slip.html">T4 slip</a></h5> 
 <p>Self-employed fisher, barber, hairdresser, taxi driver, or a driver of other passenger vehicle</p>
 </li>	
-<li class="cnjnctn-col"><h4><a href="https://test.canada.ca/cra-arc/payroll/file/t4aslip.html">T4A slip</a></h4> 
+<li class="cnjnctn-col"><h5><a href="https://test.canada.ca/cra-arc/payroll/file/t4aslip.html">T4A slip</a></h5> 
 <p>Self-employed farmer and other self-employed workers</p>
 </li>
 </ul>
@@ -191,17 +191,19 @@
  <details id="tab1"><summary>Self-employed</summary>
 <p>Understanding the self-employed's tax obligations:</p>
 <ul>
-<li><a href="#1c">Income tax obligations</a> </li>
-<li><a href="#1b">Remitting the GST/HST on payments made by the self-employed worker</a> </li>
-<li><a href="#1d">Payroll and GST/HST obligations for employees of the self-employed worker</a> </li>
+<li><a href="#1a">Income tax obligations</a> </li>
+<li><a href="#1b">GST/HST obligations</a> </li>
+<li><a href="#1c">Other tax obligations</a> </li>
+<li><a href="#1d">Tax obligations for employees of the self-employed worker</a> </li>
 </ul> 
 
 
-<h2 id="1c">Income tax obligations</h2>
-
-<p>When filing the <strong>T1 return</strong>, the self-employed worker:</p>
+<h2 id="1a">Income tax obligations</h2>
+<p>Self-employed workers who are residents of Canada are required to report their worldwide income from all sources. </p>
+<p>If the self-employed worker is a non-resident, they are subject to Canadian income tax on most Canadian-sourced income paid or credited to them during the year unless all or part of that income is exempt under a tax treaty. </p>
+<p>When filing the <strong>T1 return</strong>, the self-employed worker uses the amounts from the T4 or T4A slip to:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check text-success fa-li"></span> <p>Calculates the amount of CPP/QPP contributions because a self-employed worker is responsible for both the employer’s and employee's contributions to the plan using one of the following:</p>
+<li><span class="fas fa-check text-success fa-li"></span> <p>Calculate the amount of CPP/QPP contributions because a self-employed worker is responsible for both the employer’s and employee's contributions to the plan using one of the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s8.html">Schedule 8</a>, CPP Contributions and Overpayment (for all except QC) </li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/quebec/5005-s8.html">Schedule 8</a>, QPP Contributions (for QC only)</li>
@@ -209,10 +211,10 @@
 </ul>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/cpp/canada-pension-plan-cpp-contributions-cpp-working-beneficiaries.html">Canada Pension Plan (CPP) contributions for CPP working beneficiaries</a></p>
 </li>
-<li><span class="fas fa-check text-success fa-li"></span> <p>Calculates the amount of EI premiums only if the self-employed worker is <strong>not</strong> a barber, hairdresser, fisher, taxi driver, or a driver of other passenger vehicles using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s13.html">Schedule 13</a>, EI Premiums on Self-Employment and Other Eligible Earnings <small>(under special EI regulations, the payer is responsible to remit EI on behalf of the worker on all of their insurable earnings)</small></p>
+<li><span class="fas fa-check text-success fa-li"></span> <p>Calculate the amount of EI premiums only if the self-employed worker is <strong>not</strong> a barber, hairdresser, fisher, taxi driver, or a driver of other passenger vehicles using <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s13.html">Schedule 13</a>, EI Premiums on Self-Employment and Other Eligible Earnings <small>(under special EI regulations, the payer is responsible to remit EI on behalf of the worker on all of their insurable earnings)</small></p>
 <p>Learn more: <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></p>
 </li>
-<li><span class="fas fa-check text-success fa-li"></span> <p>Calculates and reports business income and expenses using:</p>
+<li><span class="fas fa-check text-success fa-li"></span> <p>Calculate and report business income and expenses using:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
@@ -232,12 +234,18 @@
 
 <p class="mrgn-tp-lg">Learn more about other reporting tax obligations: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships.html">Sole proprietorships and partnerships</a></p>
 
-<h2 id="1b">Remitting the GST/HST on payments made by the self-employed worker</h2>
-<p>Generally, the self-employed worker must remit the GST/HST on taxable supplies or services provided by them.</p>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+<h2 id="1b">GST/HST obligations</h2>
+<p>Generally, any person must open a GST/HST account, collect, file and remit (pay) the GST/HST if they provide goods or services and earn more than $30,000 over 4 calendar quarters.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Collect, file, and remit (pay) the GST/HST</a></p>
 
-<h2 id="1d">Payroll and GST/HST obligations for employees of the self-employed worker</h2>
-<p>The payroll and GST/HST obligations for employees of the self-employed worker are the same as regular employers.</p>
+<h2 id="1c">Other tax obligations</h2>
+<p>Depending on the type of industry, the self-employed worker may have other tax obligations, for example: </p>
+<ul>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>	
+</ul>
+
+<h2 id="1d">Tax obligations for employees of the self-employed worker</h2>
+<p>The tax obligations for employees of the self-employed worker are the same as regular employers.</p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship: Understand the tax obligations</a></p>
 
